@@ -171,7 +171,7 @@ public class PostgresJobsLogsITest extends SQLTransportIntegrationTest {
                         "sys.jobs_log must have an entry WHERE stmt=" + stmtStr, resultSet.next(), is(true));
                     assertThat(resultSet.getString(1), is(stmtStr));
                     if (checkForError) {
-                        assertThat(resultSet.getString(2), is("\"a\" must not be null"));
+                        assertThat(resultSet.getString(2), is("SQLParseException: \"a\" must not be null"));
                     }
                 }
             } catch (Exception e) {
